examples/image-rs-input/src/codecs/snapshots/rusty_image_rs_input__codecs__webp__tests__read_animated_lossy_webp_headers.snap
---
source: examples/image-rs-input/src/codecs/webp.rs
expression: animation_info
---
AnimationInfo {
    width: 512,
    height: 512,
    frame_timings: {
        0.0: 0,
        0.016: 1,
        0.032: 2,
        0.048: 3,
        0.064: 4,
        0.080000006: 5,
        0.09600001: 6,
        0.11200001: 7,
        0.128: 8,
        0.14400001: 9,
        0.16000001: 10,
        0.17600001: 11,
        0.19200002: 12,
        0.20800002: 13,
        0.22400002: 14,
        0.24000002: 15,
        0.256: 16,
        0.272: 17,
        0.28800002: 18,
        0.30400002: 19,
        0.32000002: 20,
        0.33600003: 21,
        0.35200003: 22,
        0.36800003: 23,
        0.38400003: 24,
        0.40000004: 25,
        0.41600004: 26,
        0.43200004: 27,
        0.44800004: 28,
        0.46400005: 29,
        0.48000005: 30,
        0.49600005: 31,
        0.512: 32,
        0.528: 33,
        0.54399997: 34,
        0.55999994: 35,
        0.5759999: 36,
        0.5919999: 37,
        0.60799986: 38,
        0.62399983: 39,
        0.6399998: 40,
        0.6559998: 41,
        0.67199975: 42,
        0.6879997: 43,
        0.7039997: 44,
        0.7199997: 45,
        0.73599964: 46,
        0.7519996: 47,
        0.7679996: 48,
        0.78399956: 49,
        0.79999954: 50,
        0.8159995: 51,
        0.8319995: 52,
        0.84799945: 53,
        0.8639994: 54,
        0.8799994: 55,
        0.8959994: 56,
        0.91199934: 57,
        0.9279993: 58,
        0.9439993: 59,
        0.95999926: 60,
        0.97599924: 61,
        0.9919992: 62,
        1.0079992: 63,
        1.0239992: 64,
        1.0399992: 65,
        1.0559993: 66,
        1.0719993: 67,
        1.0879993: 68,
        1.1039994: 69,
        1.1199994: 70,
        1.1359994: 71,
        1.1519995: 72,
        1.1679995: 73,
        1.1839995: 74,
        1.1999996: 75,
        1.2159996: 76,
        1.2319996: 77,
        1.2479997: 78,
        1.2639997: 79,
        1.2799997: 80,
        1.2959998: 81,
        1.3119998: 82,
        1.3279998: 83,
        1.3439999: 84,
        1.3599999: 85,
        1.3759999: 86,
        1.392: 87,
        1.408: 88,
        1.424: 89,
        1.44: 90,
        1.4560001: 91,
        1.4720001: 92,
        1.4880002: 93,
        1.5040002: 94,
        1.5200002: 95,
        1.5360003: 96,
        1.5520003: 97,
        1.5680003: 98,
        1.5840003: 99,
        1.6000004: 100,
        1.6160004: 101,
        1.6320004: 102,
        1.6480005: 103,
        1.6640005: 104,
        1.6800005: 105,
        1.6960006: 106,
        1.7120006: 107,
        1.7280006: 108,
        1.7440007: 109,
        1.7600007: 110,
        1.7760007: 111,
        1.7920008: 112,
        1.8080008: 113,
        1.8240008: 114,
        1.8400009: 115,
        1.8560009: 116,
        1.8720009: 117,
        1.888001: 118,
        1.904001: 119,
        1.920001: 120,
        1.9360011: 121,
        1.9520011: 122,
        1.9680011: 123,
        1.9840012: 124,
        2.0000012: 125,
        2.0160012: 126,
        2.0320013: 127,
        2.0480013: 128,
        2.0640013: 129,
        2.0800014: 130,
        2.0960014: 131,
        2.1120014: 132,
        2.1280015: 133,
        2.1440015: 134,
        2.1600015: 135,
        2.1760015: 136,
        2.1920016: 137,
        2.2080016: 138,
        2.2240016: 139,
        2.2400017: 140,
        2.2560017: 141,
        2.2720017: 142,
        2.2880018: 143,
        2.3040018: 144,
        2.3200018: 145,
        2.3360019: 146,
        2.352002: 147,
        2.368002: 148,
        2.384002: 149,
        2.400002: 150,
        2.416002: 151,
        2.432002: 152,
        2.448002: 153,
        2.4640021: 154,
        2.4800022: 155,
        2.4960022: 156,
        2.5120022: 157,
        2.5280023: 158,
        2.5440023: 159,
        2.5600023: 160,
        2.5760024: 161,
        2.5920024: 162,
        2.6080024: 163,
        2.6240025: 164,
        2.6400025: 165,
        2.6560025: 166,
        2.6720026: 167,
        2.6880026: 168,
        2.7040026: 169,
        2.7200027: 170,
        2.7360027: 171,
        2.7520027: 172,
        2.7680027: 173,
        2.7840028: 174,
        2.8000028: 175,
        2.8160028: 176,
        2.8320029: 177,
        2.848003: 178,
        2.864003: 179,
        2.880003: 180,
        2.896003: 181,
        2.912003: 182,
        2.928003: 183,
        2.944003: 184,
        2.9600031: 185,
        2.9760032: 186,
        2.9920032: 187,
        3.0080032: 188,
        3.0240033: 189,
        3.0400033: 190,
        3.0560033: 191,
        3.0720034: 192,
        3.0880034: 193,
        3.1040034: 194,
        3.1200035: 195,
        3.1360035: 196,
        3.1520035: 197,
        3.1680036: 198,
        3.1840036: 199,
        3.2000036: 200,
        3.2160037: 201,
        3.2320037: 202,
        3.2480037: 203,
        3.2640038: 204,
        3.2800038: 205,
        3.2960038: 206,
        3.3120039: 207,
        3.328004: 208,
        3.344004: 209,
        3.360004: 210,
        3.376004: 211,
        3.392004: 212,
        3.408004: 213,
        3.424004: 214,
        3.440004: 215,
        3.4560041: 216,
        3.4720042: 217,
        3.4880042: 218,
        3.5040042: 219,
        3.5200043: 220,
        3.5360043: 221,
        3.5520043: 222,
        3.5680044: 223,
        3.5840044: 224,
        3.6000044: 225,
        3.6160045: 226,
        3.6320045: 227,
        3.6480045: 228,
        3.6640046: 229,
        3.6800046: 230,
        3.6960046: 231,
        3.7120047: 232,
        3.7280047: 233,
        3.7440047: 234,
        3.7600048: 235,
        3.7760048: 236,
        3.7920048: 237,
        3.8080049: 238,
        3.824005: 239,
        3.840005: 240,
        3.856005: 241,
        3.872005: 242,
        3.888005: 243,
        3.904005: 244,
        3.920005: 245,
        3.936005: 246,
        3.9520051: 247,
        3.9680052: 248,
        3.9840052: 249,
        4.0000052: 250,
        4.016005: 251,
        4.032005: 252,
        4.0480046: 253,
        4.0640044: 254,
        4.080004: 255,
        4.096004: 256,
        4.112004: 257,
        4.1280036: 258,
        4.1440034: 259,
        4.160003: 260,
        4.176003: 261,
        4.192003: 262,
        4.2080026: 263,
        4.2240024: 264,
        4.240002: 265,
        4.256002: 266,
        4.2720017: 267,
        4.2880015: 268,
        4.3040013: 269,
        4.320001: 270,
        4.336001: 271,
        4.3520007: 272,
        4.3680005: 273,
        4.3840003: 274,
        4.4: 275,
        4.416: 276,
        4.4319997: 277,
        4.4479995: 278,
        4.4639993: 279,
        4.479999: 280,
        4.495999: 281,
        4.5119987: 282,
        4.5279984: 283,
        4.5439982: 284,
        4.559998: 285,
        4.575998: 286,
        4.5919976: 287,
        4.6079974: 288,
        4.623997: 289,
        4.639997: 290,
        4.655997: 291,
        4.6719966: 292,
        4.6879964: 293,
        4.703996: 294,
        4.719996: 295,
        4.735996: 296,
        4.7519956: 297,
        4.7679954: 298,
        4.783995: 299,
    },
    length_in_seconds: 4.799995,
}
